rustdocs/errors/rust-bitcoin-hashes-src-sha1-mod.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/hashes/src/sha1/mod.rs:5:5
  |
5 | use internals::slice::SliceExt;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
5 + extern crate internals;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/hashes/src/sha1/crypto.rs:3:5
  |
3 | use internals::slice::SliceExt;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
 --> ../rust-bitcoin/hashes/src/sha1/mod.rs:5:1
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:10:5
   |
10 | use core::cmp;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::incomplete_block_len`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:12:13
   |
12 | use crate::{incomplete_block_len, HashEngine as _};
   |             ^^^^^^^^^^^^^^^^^^^^ no `incomplete_block_len` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:14:8
   |
14 | crate::internal_macros::general_hash_type! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:90:12
   |
90 |     crate::internal_macros::engine_input_impl!();
   |            ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:20:6
   |
20 | impl Hash {
   |      ^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error[E0404]: expected trait, found struct `crate::HashEngine`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:83:6
   |
83 | impl crate::HashEngine for HashEngine {
   |      ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
  --> ../rust-bitcoin/hashes/src/sha1/mod.rs:84:17
   |
84 |     type Hash = Hash;
   |                 ^^^^ not a type
   |
help: consider importing this trait instead
   |
 5 + use std::hash::Hash;
   |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0404`.
